--- a/src/main/webapp/css/numguessstyle.css
+++ b/src/main/webapp/css/numguessstyle.css
@@ -22,6 +22,7 @@ h1 {
     padding-bottom: .2em;
     padding-left: .4em;
     margin: 0;
+    text-align: center;
 }
 
 #tagline p {
@@ -34,6 +35,13 @@ h1 {
     padding-bottom: .2em;
     padding-left: .8em;
     margin: 0;
+    text-align: center;
+
+}
+
+#becali {
+    align-content: center;
+
 }
 
 #header {
@@ -43,17 +51,18 @@ h1 {
 }
 
 #navigation {
+    background-color: white;
     position: absolute;
     top: 110px;
     width: 110px;
     height: 180px;
-    background-color: navajowhite;
     color:black;
     padding-left: .8em;
 ;
 }
 
 #bodycontent {
+    background-color: yellow;
     position: absolute;
     left: 140px;
     top: 120px;
@@ -67,10 +76,22 @@ h1 {
     top: 110px;
     width: 120px;
     height:180px;
-    background-color: navajowhite;
+    background-color: black;
     color:black;
     padding-left: .8em;
-;
+
+}
+
+#picturecontent {
+    position: absolute;
+    left: 480px;
+    top: 110px;
+    width: 500px;
+    height:180px;
+    background-color: red;
+    color:black;
+    padding-left: .8em;
+
 }
 
 #serverResponse {
