--- a/src/main/webapp/css/numguessstyle.css
+++ b/src/main/webapp/css/numguessstyle.css
@@ -40,8 +40,9 @@ h1 {
 }
 
 #becali {
-    align-content: center;
-
+    margin: auto;
+    width: 20%;
+    padding: 100px;
 }
 
 #header {
@@ -51,44 +52,29 @@ h1 {
 }
 
 #navigation {
-    background-color: white;
     position: absolute;
-    top: 110px;
-    width: 110px;
-    height: 180px;
+    left: 55px;
+    top: 650px;
+    width:auto;
+    height:auto;
     color:black;
-    padding-left: .8em;
-;
+
 }
 
 #bodycontent {
-    background-color: yellow;
     position: absolute;
     left: 140px;
-    top: 120px;
+    top: 400px;
     padding-top:.4em;
     padding-left:2em;
 }
 
-#postcontent {
-    position: absolute;
-    left: 360px;
-    top: 110px;
-    width: 120px;
-    height:180px;
-    background-color: black;
-    color:black;
-    padding-left: .8em;
-
-}
-
 #picturecontent {
     position: absolute;
-    left: 480px;
-    top: 110px;
+    left: 590px;
+    top: 300px;
     width: 500px;
     height:180px;
-    background-color: red;
     color:black;
     padding-left: .8em;
 
@@ -97,7 +83,7 @@ h1 {
 #serverResponse {
     color:red;
     position: absolute;
-    top: 210px;
+    top: 500px;
     left: 140px;
     width: 200px;
     background-color: navajowhite;
